# MemoryReef

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  dev.py  main.py  models.py
backend/agents/: __init__.py  adk_runtime.py  investigator.py  reflection.py  verifier.py
backend/data/: experiment_config.json  experiment_results.csv  experiment_runs.json  paper_summary.md  scenarios.json  skills.json  traces.json
backend/experiments/: metrics.py  persistence.py  runner.py
backend/tests/: __init__.py  conftest.py  test_e2e_loop.py
backend/tools/: json_store.py  keyword_pattern_tool.py  project_zip_tool.py  redactor.py  scenario_store.py  skill_retriever.py  skill_store.py  timeline_tool.py  trace_store.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: AgentLogPanel.tsx  AttemptResult.tsx  ComparisonView.tsx  CustomLogInput.tsx  ErrorAnalysis.tsx  ExperimentRunner.tsx  Fish.tsx  ScenarioSelector.tsx  SkillCard.tsx  SkillLibrary.tsx  TraceView.tsx  TutorialModal.tsx
