[project]
name = "memoryreef"
version = "0.1.0"
description = "Prototype for agents that learn reusable debugging skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121,<1.0",
    "google-adk>=2.3.0",
    "pydantic>=2.12,<3.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.38,<1.0",
]

[project.scripts]
memoryreef = "backend.dev:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
